--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       </div>
       <button type="submit" class="btn btn-success" id="submit">Submit</button>
     </form>
+    <div id="result"></div>
   </div>
 </body>
 </html>
