add html for results and story with a button to go back and change some of your answers to your questions

--- a/index.html
+++ b/index.html
@@ -78,7 +78,10 @@
       </div>
       <button type="submit" class="btn btn-success" id="submit">Submit</button>
     </form>
+    <div id="story">Hello <span id="inputtedname"></span>, I am glad to see you are taking an interest in programming! Here is the best language we suggest for you.</div>
     <div id="result"></div>
+    <button type="secondary" class="btn btn-secondary" id="secondary">Change Answers</button>
+    <footer></footer>
   </div>
 </body>
 </html>
