update all the option values to a number

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <br>
         <select class="select-gray" id="question1">
           <option value="selectOne">Please Select</option>
-          <option value="yes1">yes</option>
-          <option  value="no1">no</option>
+          <option value="1">yes</option>
+          <option  value="2">no</option>
         </select>
       </div>
 <!-- question 2 -->
@@ -34,11 +34,11 @@
         <br>
         <select id="question2">
           <option value="selectOne">Please Select</option>
-          <option value="fruits">Fruits & veggies</option>
-          <option value="eggs">Eggs & toast</option>
-          <option value="cereal">Cereal</option>
-          <option value="trombone">Avocado toast</option>
-          <option value="none">None</option>
+          <option value="1">Fruits & veggies</option>
+          <option value="2">Eggs & toast</option>
+          <option value="3">Cereal</option>
+          <option value="4">Avocado toast</option>
+          <option value="5">I don't eat breakfast</option>
         </select>
       </div>
 <!-- quesiton 3 -->
@@ -47,8 +47,8 @@
         <br>
         <select class="select-gray" id="question3">
           <option value="selectOne">Please Select</option>
-          <option value="no">No</option>
-          <option value="yes">Yes</option>
+          <option value="1">Yes</option>
+          <option value="2">No</option>
         </select>
       </div>
 <!-- question 4 -->
@@ -57,10 +57,10 @@
         <br>
         <select id="question4">
           <option value="selectOne">Please Select</option>
-          <option value="low">I like to put in minimal effort</option>
-          <option value="moderate">I can stand a challenge or two</option>
-          <option value="moderate-high">A lot of my day is finding problems to solve</option>
-          <option value="high">I am a problem solving machine</option>
+          <option value="1">I like to put in minimal effort</option>
+          <option value="2">I can stand a challenge or two</option>
+          <option value="3">A lot of my day is finding problems to solve</option>
+          <option value="4">I am a problem solving machine</option>
         </select>
       </div>
 <!-- question 5 -->
@@ -69,11 +69,11 @@
         <br>
         <select class="select-gray" id="question5">
           <option value="selectOne">Please Select</option>
-          <option value="opera">In an opera house</option>
-          <option value="shower">In the shower</option>
-          <option value="car">In the car</option>
-          <option value="living-room">In my living room</option>
-          <option value="all-the-above">All the above</option>
+          <option value="1">In an opera house</option>
+          <option value="2">In the shower</option>
+          <option value="3">In the car</option>
+          <option value="4">In my living room</option>
+          <option value="5">All the above</option>
         </select>
       </div>
       <button type="submit" class="btn btn-success" id="submit">Submit</button>
