update javascript to show and hide result

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
     <h4>Fill out the questionnaire to see your answer.</h4>
     <form id="form">
-      <div class="name">
+      <div class="labelName">
         <label for="name">What is your name?</label>
         <input id="name" type="text">
       </div>
@@ -78,9 +78,9 @@
       </div>
       <button type="submit" class="btn btn-success" id="submit">Submit</button>
     </form>
-    <div id="story">Hello <span id="inputtedname"></span>, I am glad to see you are taking an interest in programming! Here is the best language we suggest for you.</div>
+    <div id="story">Hello <span id="nameInput"></span>, I am glad to see you are taking an interest in programming! Here is the best language we suggest for you.</div>
     <div id="result"></div>
-    <button type="secondary" class="btn btn-secondary" id="secondary">Change Answers</button>
+    <button type="secondary" class="btn btn-secondary" id="secondary">Try Again</button>
     <footer></footer>
   </div>
 </body>
