update css styling on the result. Add new title after result is displayed and program the show hide options for these in javascript

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="jumbotron">
       <h2>Which Programming language fits you?</h2>
     </div>
-    <h4>Fill out the questionnaire to see your answer.</h4>
+    <h4 id="fillOut">Fill out the questionnaire to see your answer.</h4>
+    <h3 id="complete">Congratulations!</h3>
     <form id="form">
       <div class="labelName">
         <label for="name">What is your name?</label>
