update readme description

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <button type="submit" class="btn btn-success" id="submit">Submit</button>
     </form>
-    <div id="story">Hello <span id="nameInput"></span>, I am glad to see you are taking an interest in programming! Here is the best language we suggest for you.</div>
+    <div id="story"><p>Hello <span id="nameInput"></span>, I am glad to see you are taking an interest in programming! Here is the best language we suggest for you.</p></div>
     <div id="result"></div>
     <button type="secondary" class="btn btn-secondary" id="secondary">Try Again</button>
     <footer></footer>
