--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery-3.5.1.js"></script>
   <script src="js/scripts.js"></script>
-  <title>Programming Language Selector?</title>
+  <title>Programming Language Selector</title>
 </head>
 <body>
   <div class="container">
