add error message and logic in js if a user does not make a selection. updated values for please select option to be zero

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <label for="question1">Do you value efficiency?</label>
         <br>
         <select class="select-gray" id="question1">
-          <option value="selectOne">Please Select</option>
+          <option value="0">Please Select</option>
           <option value="1">yes</option>
           <option  value="2">no</option>
         </select>
@@ -34,7 +34,7 @@
         <label for="question2">What is your favorite morning breakfast?</label>
         <br>
         <select id="question2">
-          <option value="selectOne">Please Select</option>
+          <option value="0">Please Select</option>
           <option value="1">Fruits & veggies</option>
           <option value="2">Eggs & toast</option>
           <option value="3">Cereal</option>
@@ -47,7 +47,7 @@
         <label for="question3">Do you often take command in tough situations?</label>
         <br>
         <select class="select-gray" id="question3">
-          <option value="selectOne">Please Select</option>
+          <option value="0">Please Select</option>
           <option value="1">Yes</option>
           <option value="2">No</option>
         </select>
@@ -57,7 +57,7 @@
         <label for="question4">How challenging do you like things to be?</label>
         <br>
         <select id="question4">
-          <option value="selectOne">Please Select</option>
+          <option value="0">Please Select</option>
           <option value="1">I like to put in minimal effort</option>
           <option value="2">I can stand a challenge or two</option>
           <option value="3">A lot of my day is finding problems to solve</option>
@@ -69,7 +69,7 @@
         <label for="question5">Where do you sing the most?</label>
         <br>
         <select class="select-gray" id="question5">
-          <option value="selectOne">Please Select</option>
+          <option value="0">Please Select</option>
           <option value="1">In an opera house</option>
           <option value="2">In the shower</option>
           <option value="3">In the car</option>
