add question 6 to the form in html and updated js for the input constant and updated if statement

--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
           <option value="5">All the above</option>
         </select>
       </div>
+<!-- question 6 -->
+      <div class="question">
+        <label for="question6">What is the square root of orange?</label>
+        <br>
+        <select class="select-gray" id="question6">
+          <option value="0">Please Select</option>
+          <option value="1">Two</option>
+          <option value="2">Blue</option>
+          <option value="3">16</option>
+          <option value="4">Desk</option>
+        </select>
+      </div>
       <button type="submit" class="btn btn-success" id="submit">Submit</button>
     </form>
     <div id="story"><p>Hello <span id="nameInput"></span>, I am glad to see you are taking an interest in programming! Here is the best language we suggest for you.</p></div>
