--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Programming Language Selector</title>
 </head>
 <body>
+  <header></header>
   <div class="container">
     <div class="jumbotron">
       <h2>Which Programming language fits you?</h2>
